# Operational_Research_2

./: .gitignore  notes.md
plotter/: plot.ipynb  requirements.txt
results/: .~lock.random_1h1000n_refinements.csv#  cplex_1h_500.csv  dummy_result.txt  random1h1000n extra.ods  random1h1000n.ods  random_1h1000n_extra.csv  random_1h1000n_greedy.csv  random_1h1000n_greedy_2.csv  random_1h1000n_refinements.csv
src/: cmd_parser.c  cmd_parser.h  main.c  optimizer.c  optimizer.h  solver.c  solver.h  tps_data.h  tsp_data.c  tsp_data.h  tsp_parser.c  tsp_parser.h  utility.c  utility.h
src2/: CMakeLists.txt  chrono.c  cplex_1h_500.csv  dummy.csv  io_utils.c  main.c  nuovo.csv  perfprof.py  tsp.c  tsp.h  tsp_cplex.c  tsp_generative.c  utils.c
src2/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  cplex_no_heu_500n.csv  nuovo.csv  nuovo2.csv  nuovo3.csv  nuovo4.csv  nuovo5.csv  script.sh
src2/plot/: live.txt  settings.txt  settings_bs.txt  settings_bs2.txt
src2/src2_alberto/: io_utils.c  main.c  tsp.c  tsp.h  tsp_cplex.c  tsp_meta.c  utils.c
